# EllipticBitcoinToolkit

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: elliptic_toolkit.dataset.rst  elliptic_toolkit.log_parser.rst  elliptic_toolkit.model_wrappers.rst  elliptic_toolkit.plots.rst  elliptic_toolkit.rst  elliptic_toolkit.temporal_cv.rst  modules.rst
docs/examples/: examples.rst  gcn.ipynb  gcn_example.rst  random_forest.ipynb  random_forest_example.rst  temporal_rolling_cv.ipynb  temporal_rolling_cv_example.rst
elliptic_toolkit/: __init__.py  dataset.py  log_parser.py  model_wrappers.py  plots.py  temporal_cv.py
examples/: gcn.ipynb
tests/: __init__.py  test_dataset.py  test_log_parser.py  test_model_wrappers.py  test_temporal_cv.py
