[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elliptic_toolkit"
version = "0.1.0a8"
description = "A toolkit for the Elliptic Bitcoin dataset (university project)"
authors = [
    { name = "Vincenzo Bisogno", email = "v.bisogno3@studenti.unipit.it" }
]
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = [
    "scikit-learn>=1.7.1",
    "pandas>=2.3.1",
    "numpy>=2.1.2",
    "matplotlib>=3.10.5",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1"
]
urls = { "Homepage" = "https://github.com/VinceNeede/EllipticBitcoinToolkit" }

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "nbsphinx>=0.8.0",
    "ipykernel>=6.0.0",
]
